# Twitter

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
Tweeter/: asgi.py  settings.py  urls.py  wsgi.py
app/: models.py
app/migrations/: 0001_initial.py
post/: forms.py  models.py  urls.py  views.py
post/migrations/: 0001_initial.py
post/templates/: create_post.html  index.html  post_detail.html
project/Tests/: tests_models.py  tests_views.py
project/migrations/: 0002_alter_profile_bio.py
setup/: settings.py
twitter/: middleware.py  settings.py  urls.py
twitter/migrations/: 0001_initial.py  0002_alter_user_followers_alter_user_follows.py  0003_alter_user_followers_alter_user_follows.py  0004_user_tweets_alter_user_followers_alter_user_follows.py  0005_alter_tweet_author.py  0006_alter_tweet_author.py  0007_remove_user_tweets_alter_tweet_author_and_more.py  0008_alter_tweet_author.py  0009_tweet_name.py  0010_chatmessage.py  0011_conversation_message_delete_chatmessage.py  0012_alter_message_timestamp.py  0013_alter_conversation_id.py  0014_alter_message_options.py  0015_alter_message_options.py
twitter/models/: __init__.py  chat.py  tweet.py  user.py
twitter/serializers/: __init__.py  chat_serializer.py  tweet_serializer.py  user_serializer.py
twitter/viewsets/: __init__.py  chat_viewset.py  tweet_viewset.py  user_viewset.py
twitterbackend/: asgi.py  settings.py  urls.py  wsgi.py
user/: forms.py  models.py  serializers.py  urls.py  views.py
user/templates/: base.html  (+3 more)
virtual/: pyvenv.cfg
(+6 files in other folders)
