[tool.poetry]
name = "backend twitter"
version = "0.1.0"
description = "projeto backend twitter"
authors = ["Leonardo Sibuya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
gitpython = "^3.1.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
